Package docs in a docs zip instead of using html

--- a/src/main/asciidoc/dns.adoc
+++ b/src/main/asciidoc/dns.adoc
@@ -169,10 +169,10 @@ client.resolveMX("vertx.io", function (ar, ar_err) {
 
 ----
 
-Be aware that the List will contain the link:jsdoc/mx_record-MxRecord.html[`MxRecord`] sorted by the priority of them, which
+Be aware that the List will contain the `link:jsdoc/mx_record-MxRecord.html[MxRecord]` sorted by the priority of them, which
 means MX records with smaller priority coming first in the List.
 
-The link:jsdoc/mx_record-MxRecord.html[`MxRecord`] allows you to access the priority and the name of the MX record by offer methods for it like:
+The `link:jsdoc/mx_record-MxRecord.html[MxRecord]` allows you to access the priority and the name of the MX record by offer methods for it like:
 
 [source,java]
 ----
